--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,5 @@
-Flask==2.0.1
+Flask==2.0.3
+gunicorn==20.1.0
 requests==2.28.1
-werkzeug==2.0.3
-flask
-gunicorn
-requests
-beautifulsoup4
+beautifulsoup4==4.12.2
+flask-cors==3.0.10
