--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.0.3
-gunicorn==20.1.0
+Flask==2.0.1
+Werkzeug==2.0.3
+gunicorn
 requests==2.28.1
-beautifulsoup4==4.12.2
-flask-cors==3.0.10
+beautifulsoup4
